keywords, description, twitter and facebook description, image

--- a/includes/header.html
+++ b/includes/header.html
@@ -17,23 +17,23 @@
 		if (isset($page_desc)) {
 				echo $page_desc;
 		} else {
-				echo 'Page Description Here';
+				echo 'Bringing fashion to your fingertips. LUXITA is a luxury nail salon located at the Shangri-La Hotel in Tokyo. A combination of Luxury and Ita nails.';
 		}
 	?>"/>
 	<meta name="keywords" content="<?php
 		if (isset($page_keywords)) {
 				echo $page_keywords;
 		} else {
-				echo 'General Keywords Here';
+				echo 'LUXITA Salon in Tokyo, Tokyo Luxury nail salon, Nail salon in Tokyo, Popular nail salon in Tokyo, Nail salon near Tokyo station, Beauty salon, nail spa, nail spa in tokyo, hotel nail salon, Shangri-La nail salon, nail salon in Shangri-La, nail shop, nail shop in Tokyo, popular nail salon in Japan, top nail salon in tokyo, top nail salon in Japan';
 		}
 	?>">
 	<meta name="author" content="Katherine Delorme">
 	<meta name="application-name" content="LUXITA"/>
 	<!--Dublin Core-->
-	<meta name="DC.Title" content="TITLE HERE" />
+	<meta name="DC.Title" content="LUXITA - Bringing Fashion To Your Finger Tips" />
 	<meta name="DC.Creator" content="Katherine Delorme" />
-	<meta name="DC.Subject" content="BUSINESS TYPE" />
-	<meta name="DC.Description" content="Description AGAIN" />
+	<meta name="DC.Subject" content="Luxury nail salon in Tokyo" />
+	<meta name="DC.Description" content="Bringing fashion to your fingertips. LUXITA is a luxury nail salon located at the Shangri-La Hotel in Tokyo. A combination of Luxury and Ita nails." />
 	<meta name="DC.Type" content="Business" />
 	<meta name="DC.Language" content="English" />
 	<!--Twitter Card: Summary-->
@@ -43,15 +43,15 @@
 		if (isset($page_title)) {
 				echo $page_title;
 		} else {
-				echo 'Title';
+				echo 'LUXITA - Bringing Fashion To Your Finger Tips';
 		}
 	?>" />
-	<meta name="twitter:description" content="Description" />
+	<meta name="twitter:description" content="Bringing fashion to your fingertips. LUXITA is a luxury nail salon located at the Shangri-La Hotel Tokyo. A blend of Luxury and Ita nails." />
 	<meta name="twitter:image" content="<?php
 		if (isset($twitter_img)) {
 				echo $twitter_img;
 		} else {
-				echo '';
+				echo 'http://luxita.com/assets/twitterHome.png';
 		}
 		?>">
 	<!--Facebook Open Graph-->
@@ -61,15 +61,15 @@
 		if (isset($page_title)) {
 				echo $page_title;
 		} else {
-				echo 'Title';
+				echo 'LUXITA - Bringing Fashion To Your Finger Tips';
 		}
 	?>" />
-	<meta property="og:description" content="Description" />
+	<meta property="og:description" content="Bringing fashion to your fingertips. LUXITA is a luxury nail salon located at the Shangri-La Hotel Tokyo. A blend of Luxury and Ita nails." />
 	<meta property="og:image" content="<?php
 		if (isset($facebook_img)) {
 				echo $facebook_img;
 		} else {
-				echo '';
+				echo 'http://luxita.com/assets/fbHome.png';
 		}
 		?>" />
 	<!--robots index-->
