--- a/includes/header.html
+++ b/includes/header.html
@@ -24,7 +24,7 @@
 		if (isset($page_keywords)) {
 				echo $page_keywords;
 		} else {
-				echo 'LUXITA Salon in Tokyo, Tokyo Luxury nail salon, Nail salon in Tokyo, Popular nail salon in Tokyo, Nail salon near Tokyo station, Beauty salon, nail spa, nail spa in tokyo, hotel nail salon, Shangri-La nail salon, nail salon in Shangri-La, nail shop, nail shop in Tokyo, popular nail salon in Japan, top nail salon in tokyo, top nail salon in Japan';
+				echo 'LUXITA Salon in Tokyo, Tokyo Luxury nail salon, Nail salon in Tokyo, Popular nail salon in Tokyo, Nail salon near Tokyo station, Beauty salon, nail spa, nail spa in tokyo, hotel nail salon, Shangri-La nail salon, nail salon in Shangri-La, nail shop, nail shop in Tokyo, popular nail salon in Japan, top nail salon in tokyo, top nail salon in Japan, English speaking nail salon in Japan';
 		}
 	?>">
 	<meta name="author" content="Katherine Delorme">
