--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -78,9 +78,9 @@ nav a{
 .hometopContent{
 	@extend .basepadding;
 	background-image: url("../assets/shape.png");
-  background-position: center center;
+  background-position: right center;
   background-repeat: no-repeat;
-	background-size: 100% auto;
+	background-size: cover;
 	height: 100vh;
 	width: 60%;
   /*padding-top: 15%;*/
