--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -488,7 +488,7 @@ input[type="submit"]:focus{cursor: pointer;background-color: $primary;}
     position: absolute;
     height: 100%;
     width: 100%;
-    background: rgba(20,20,20,0.4);
+    /*background: rgba(20,20,20,0.4);*/
     transition: 0.3s ease;
 }
 .photo-tile:hover::before {opacity: 0;}
