additional text for pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ hr {
     color: #ffffff;
     text-decoration: none; }
   .btn:hover {
+    color: #ffffff;
     background: #bda355; }
 
 .middle {
