change out images in about pg. Add logos to about and home

--- a/includes/header.html
+++ b/includes/header.html
@@ -108,6 +108,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
+          <a class="nav-item nav-link" href="index">Home</a>
           <a class="nav-item nav-link" href="naildesigns">Nail Designs</a>
           <a class="nav-item nav-link" href="discoverdiamond">Discover Diamond Nails</a>
           <a class="nav-item nav-link" href="discoverita">Discover Ita Nails</a>
