--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ nav a {
   width: 60%;
   /*padding-top: 15%;*/ }
   .hometopContent div {
-    display: inline-block; }
+    /*display: inline-block;*/ }
     .hometopContent div a:first-of-type {
       margin-right: 2%; }
   .hometopContent .btn {
@@ -323,7 +323,7 @@ nav a {
   margin-top: 2em; }
 
 .abouttop {
-  background-image: url("../assets/chispa-aboutCover.jpg");
+  background-image: url("../assets/chispa1.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 100% auto; }
@@ -341,8 +341,9 @@ nav a {
   margin-top: 8.5em; }
 
 .aboutThirty {
-  background-image: url("../assets/chiSpaLounge.jpg");
-  background-position: right center;
+  /*background-image: url("../assets/chiSpaLounge.jpg");*/
+  background-image: url("../assets/chiSpa2.jpg");
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh; }
@@ -718,14 +719,26 @@ footer {
   h4 {
     font-size: 1.575em; }
 
-  .hometop {
-    background-image: none;
-    background-color: #ffffff; }
+  .hometop, .abouttop {
+    /*background-image: none;*/
+    background-color: #ffffff;
+    background-position: right center;
+    background-size: cover; }
+    .hometop *, .abouttop * {
+      color: #000000; }
 
-  .abouttop {
-    background: linear-gradient(rgba(189, 163, 85, 0.7), rgba(255, 255, 255, 0.8)), url("../assets/chispa-aboutCover.jpg") no-repeat; }
-    .abouttop h1, .abouttop h3 {
-      color: #ffffff; }
+  .hometopContent {
+    background-image: none;
+    background: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%; }
+
+  .hometopContent .btn {
+    display: block;
+    width: 60%; }
+
+  .hometopContent div a:first-of-type {
+    display: none; }
 
   .thirty, .featuredStyleR {
     display: none; }
@@ -749,22 +762,6 @@ footer {
 
   .logoInside {
     position: static; }
-
-  .hometop, .abouttop {
-    background-position: right center;
-    background-size: cover; }
-
-  .hometopContent {
-    background-image: none;
-    background: rgba(255, 255, 255, 0.7);
-    width: 95%; }
-
-  .hometopContent .btn {
-    display: block;
-    width: 60%; }
-
-  .hometopContent div a:first-of-type {
-    display: none; }
 
   .sixty {
     margin-top: 40px;
