--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -23,15 +23,27 @@
   h4 {
     font-size: 1.575em;
   }
-  .hometop{
-    background-image: none;
+  .hometop, .abouttop{
+    /*background-image: none;*/
     background-color: $tertiary;
-  }
-  .abouttop{
-    background: linear-gradient(rgba(189,163,85,0.7), rgba(255,255,255,0.8)), url("../assets/chispa-aboutCover.jpg") no-repeat;
-    h1, h3{
-      color: $tertiary;
+    background-position: right center;
+    background-size: cover;
+    *{
+      color: $quaternary;
     }
+  }
+  .hometopContent{
+  	background-image: none;
+    background: rgba(255,255,255,0.7);
+  	width: 100%;
+    height: 100%;
+  }
+  .hometopContent .btn {
+      display: block;
+      width: 60%;
+  }
+  .hometopContent div a:first-of-type {
+    display: none;
   }
   .thirty, .featuredStyleR{
     display: none;
@@ -57,22 +69,6 @@
   }
   .logoInside{
   	position: static;
-  }
-  .hometop, .abouttop{
-    background-position: right center;
-    background-size: cover;
-  }
-  .hometopContent{
-  	background-image: none;
-    background: rgba(255,255,255,0.7);
-  	width: 95%;
-  }
-  .hometopContent .btn {
-      display: block;
-      width: 60%;
-  }
-  .hometopContent div a:first-of-type {
-    display: none;
   }
   .sixty{
     margin-top: 40px;
