--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -259,7 +259,7 @@ nav a{
 	}
 }
 .abouttop{
-  background-image: url("../assets/chispa1.jpg");
+  background-image: url("../assets/chiSpa1.jpg");
   background-position: center center;
   background-repeat: no-repeat;
 	background-size: 100% auto;
