--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -133,6 +133,15 @@
   .xs-none{
     display: none;
   }
+  .xs-move-to-first{
+    -webkit-box-ordinal-group: 0;
+    -webkit-order: -1;
+    -ms-flex-order: -1;
+    order: -1;
+  }
+  .xs-top{
+    margin-top: 100px;
+  }
 }
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
