css class for hotel logo, discoverdiamond no repeat add

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -100,7 +100,10 @@ nav a{
 		}
 	}
 }
-
+.hotelLogo{
+	margin-top:2%;
+	min-height:150px;
+}
 .threeFourth{
   min-height: 75vh;
   @extend .basepadding;
