--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,10 @@ nav a {
       background-color: #000000;
       color: #ffffff; }
 
+.hotelLogo {
+  margin-top: 2%;
+  min-height: 150px; }
+
 .threeFourth {
   min-height: 75vh;
   display: flex;
@@ -733,14 +737,16 @@ footer {
   .hometopContent {
     background-image: none;
     background: rgba(255, 255, 255, 0.7);
-    width: 100%;
-    height: 100%; }
+    height: 100%;
+    /*padding-top: 10%;*/
+    width: 100%; }
 
   .hometopContent .btn {
     display: block;
     width: 60%; }
 
-  .hometopContent div a:first-of-type, .hometop .hometopContent h4 {
+  /*.hometopContent div a:first-of-type*/
+  .hometopContent div a.btn, .hometop .hometopContent h4 {
     display: none; }
 
   .thirty, .featuredStyleR {
@@ -833,7 +839,10 @@ footer {
     order: -1; }
 
   .xs-top {
-    margin-top: 100px; } }
+    margin-top: 100px; }
+
+  .hotelLogo {
+    margin-top: 8%; } }
 @media (min-width: 576px) {
   .thirty {
     height: 30vh;
