--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -35,14 +35,15 @@
   .hometopContent{
   	background-image: none;
     background: rgba(255,255,255,0.7);
-  	width: 100%;
     height: 100%;
+    /*padding-top: 10%;*/
+  	width: 100%;
   }
   .hometopContent .btn {
       display: block;
       width: 60%;
   }
-  .hometopContent div a:first-of-type, .hometop .hometopContent h4{
+  /*.hometopContent div a:first-of-type*/ .hometopContent div a.btn, .hometop .hometopContent h4{
     display: none;
   }
   .thirty, .featuredStyleR{
@@ -141,6 +142,9 @@
   }
   .xs-top{
     margin-top: 100px;
+  }
+  .hotelLogo{
+  	margin-top:8%;
   }
 }
 // Small devices (landscape phones, 576px and up)
