fix social images link

--- a/includes/header.html
+++ b/includes/header.html
@@ -51,7 +51,7 @@
 		if (isset($twitter_img)) {
 				echo $twitter_img;
 		} else {
-				echo 'http://luxita.com/assets/twitterHome.png';
+				echo 'http://luxita.com/assets/social/twitterHome.png';
 		}
 		?>">
 	<!--Facebook Open Graph-->
