comment out fontawesome since only using 2 icons that arent linked

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,9 +3,9 @@
 		<!-- Footer -->
 			<footer class="basepadding middle text-center ">
 				<div>
-					<i class="fa fa-twitter fa-lg"></i>
-					<i class="fa fa-instagram fa-lg"></i>
-					LUXITA - Bringing Fashion To Your Finger Tips
+					<!--<i class="fa fa-twitter fa-lg"></i>
+					<i class="fa fa-instagram fa-lg"></i>-->
+					LUXITA<br/>Bringing Fashion To Your Finger Tips
 				</div>
 				<div class="legal">
 					© 2017 LUXITA Ltd. All Rights Reserved
