--- a/includes/header.html
+++ b/includes/header.html
@@ -103,7 +103,7 @@
   <!-- Styles CSS -->
   <link rel="stylesheet" href="css/styles.css" type="text/css" />
   <!--fonts-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,700italic|Playfair+Display' rel='stylesheet' type='text/css'>
 </head>
 
