--- a/includes/footer.html
+++ b/includes/footer.html
@@ -43,6 +43,7 @@
 							$.fn.fullpage.setAutoScrolling(false);
 	            $.fn.fullpage.setFitToSection(false);
 							$( ".fullpagefooter" ).hide();
+							$( "#fp-nav" ).hide();
 	        }
 	    });
 	    $(window).resize(function () {
@@ -50,6 +51,7 @@
 					 			$.fn.fullpage.setAutoScrolling(false);
 	              $.fn.fullpage.setFitToSection(false);
 								$( ".fullpagefooter" ).hide();
+								$( "#fp-nav" ).hide();
 	         }
 	    });
 		</script>
