--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -56,12 +56,13 @@
     padding-bottom: 20px;
   }
   .oneFourth{
-    padding-bottom: 4%;
-    padding-top: 4%;
+    padding-bottom: 10%;
+    padding-top: 10%;
     h1 {
     font-size: 2.7em;
     }
     a.btn{
+      margin-top: 8%;
       font-size: 1em;
     }
   }
