prices menu page created and tables added and styled

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -148,3 +148,15 @@ hr.short{
 .nopadding{
   padding: 0;
 }
+.nobold{
+  font-weight: 400;
+}
+.bold{
+  font-weight: 700;
+}
+.table{
+  margin-top: 20px;
+}
+.table thead tr th, .table tbody tr td, .table td, .table th{
+    border: none;
+}
