--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -292,6 +292,29 @@ nav a{
 	background-size: cover;
 	height: 100vh;
 }
+.bgfade{
+	background: rgba(255,255,255,0.9);
+	padding: 30px 20px 30px 7%;
+}
+.naildesigntop{
+	background: linear-gradient(rgba(255,255,255,0.2), rgba(255,255,255,0.3)), url("../assets/about3.jpg") no-repeat;
+	/*background-image: url("../assets/about3.jpg");*/
+  background-position: center center;
+  background-repeat: no-repeat;
+	background-size: 100% auto;
+}
+.discoverdiamondtop{
+	background-image: url("../assets/discoverdiamond9.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+	background-size: 100% auto;
+}
+.discoveritatop{
+	background-image: url("../assets/discoverita17.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+	background-size: 100% auto;
+}
 /* ///////////// form ////////////// */
 form{
 		margin-top: 2%;
