--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -315,6 +315,12 @@ nav a{
   background-repeat: no-repeat;
 	background-size: 100% auto;
 }
+.contacttop{
+	/*background-image: url("../assets/sample2.jpg");*/
+  background-position: center center;
+  background-repeat: no-repeat;
+	background-size: 100% auto;
+}
 /* ///////////// form ////////////// */
 form{
 		margin-top: 2%;
