css bg to cover,cover, created gallery pg and added imgs

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -12,6 +12,7 @@
 					<a href="privacy-policy">Privacy Policy</a>
 					<a href="#">Press</a>
 					<a href="photo-rights">Photo Rights</a>
+					<a href="recruitment">Recruitment</a>
 				</div>
 				<div class="credit">
 					Hand coded and designed with <span>♥</span> by <a href="http://katherinedelorme.com/" target="_blank">Katherine Delorme</a>
