--- a/includes/header.html
+++ b/includes/header.html
@@ -125,6 +125,7 @@
           <a class="nav-item nav-link" href="discoverdiamond">Discover Diamond Nails</a>
           <a class="nav-item nav-link" href="discoverita">Discover Ita Nails</a>
           <a class="nav-item nav-link" href="prices">Prices</a>
+          <a class="nav-item nav-link" href="gallery">Gallery</a>
           <a class="nav-item nav-link" href="about">About</a>
           <a class="nav-item nav-link" href="contact">Contact</a>
         </div>
