--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -301,25 +301,25 @@ nav a{
 	/*background-image: url("../assets/about3.jpg");*/
   background-position: center center;
   background-repeat: no-repeat;
-	background-size: 100% auto;
+	background-size: cover;
 }
 .discoverdiamondtop{
 	background-image: url("../assets/discoverdiamond9.jpg");
   background-position: center center;
   background-repeat: no-repeat;
-	background-size: 100% auto;
+	background-size: cover;
 }
 .discoveritatop{
 	background-image: url("../assets/discoverita17.jpg");
   background-position: center center;
   background-repeat: no-repeat;
-	background-size: 100% auto;
+	background-size: cover;
 }
 .contacttop{
 	/*background-image: url("../assets/sample2.jpg");*/
   background-position: center center;
   background-repeat: no-repeat;
-	background-size: 100% auto;
+	background-size: cover;
 }
 /* ///////////// form ////////////// */
 form{
