--- a/includes/header.html
+++ b/includes/header.html
@@ -109,7 +109,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-inverse bg-inverse navbar-expand-md fixed-top">
+    <nav class="navbar navbar-inverse bg-inverse navbar-expand-lg fixed-top">
 
         <!--<a class="navbar-brand logo" href="index">
           <img src="assets/luxitaLogo.png" class="d-inline-block align-top" alt="LUXITA">
@@ -128,6 +128,16 @@
           <a class="nav-item nav-link" href="gallery">Gallery</a>
           <a class="nav-item nav-link" href="about">About</a>
           <a class="nav-item nav-link" href="contact">Contact</a>
+
+          <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Languages
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="en.luxita.com">English</a>
+              <a class="dropdown-item" href="jp.luxita.com">Japanese</a>
+            </div>
+          </div>
         </div>
       </nav>
     </header>
