Japanese translation on pages

--- a/jp/includes/header.html
+++ b/jp/includes/header.html
@@ -127,12 +127,12 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <a class="nav-item nav-link" href="http://jp.luxita.com">Home</a>
-          <a class="nav-item nav-link" href="naildesigns">Nail Designs</a>
-          <a class="nav-item nav-link" href="discoverdiamond">Discover Diamond Nails</a>
+          <a class="nav-item nav-link" href="naildesigns">ネイルデザイン</a>
+          <a class="nav-item nav-link" href="discoverdiamond">ダイヤモンドネイルの世界</a>
           <a class="nav-item nav-link" href="discoverita">Discover Ita Nails</a>
           <a class="nav-item nav-link" href="prices">メニュー</a>
           <a class="nav-item nav-link" href="gallery">Gallery</a>
-          <a class="nav-item nav-link" href="about">About</a>
+          <a class="nav-item nav-link" href="about">ついて</a>
           <a class="nav-item nav-link" href="contact">Contact</a>
 
           <div class="nav-item dropdown">
