minor changes with Japanese text

--- a/jp/includes/header.html
+++ b/jp/includes/header.html
@@ -133,7 +133,7 @@
           <a class="nav-item nav-link" href="prices">メニュー</a>
           <a class="nav-item nav-link" href="gallery">Gallery</a>
           <a class="nav-item nav-link" href="about">ついて</a>
-          <a class="nav-item nav-link" href="contact">Contact</a>
+          <a class="nav-item nav-link" href="contact">コンタクト</a>
 
           <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
