--- a/jp/css/styles.css
+++ b/jp/css/styles.css
@@ -1,6 +1,3 @@
-/**:hover{
-  transition: all 280ms ease-in-out;
-}*/
 section {
   display: block;
   height: 100vh; }
@@ -399,7 +396,7 @@ nav a {
   padding: 30px 20px 30px 7%; }
 
 .naildesigntop {
-  background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.2)), url("../assets/naildesigns.jpg") no-repeat;
+  background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2)), url("../assets/naildesigns.jpg") no-repeat;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover; }
@@ -584,7 +581,7 @@ input[type="submit"]:focus {
 
 .discoverita1 {
   background-image: url("../assets/discoveritaA.jpg");
-/*background-position: center bottom;*/ }
+  /*background-position: center bottom;*/ }
 
 .discoverita2 {
   background-image: url("../assets/discoveritaB-1.jpg");
@@ -800,7 +797,6 @@ footer {
     max-width: 100%; }
 
   .hometop, .abouttop {
-    /*background-image: none;*/
     background-color: #ffffff;
     background-position: right center;
     background-size: cover; }
@@ -811,14 +807,12 @@ footer {
     background-image: none;
     background: rgba(255, 255, 255, 0.7);
     height: 100%;
-    /*padding-top: 10%;*/
     width: 100%; }
 
   .hometopContent .btn {
     display: block;
     width: 60%; }
 
-  /*.hometopContent div a:first-of-type*/
   .hometopContent div a.btn, .hometop .hometopContent h4 {
     display: none; }
 
