--- a/jp/includes/header.html
+++ b/jp/includes/header.html
@@ -131,7 +131,7 @@
           <a class="nav-item nav-link" href="discoverdiamond">ダイヤモンドネイルの世界</a>
           <a class="nav-item nav-link" href="discoverita">Discover Ita Nails</a>
           <a class="nav-item nav-link" href="prices">メニュー</a>
-          <a class="nav-item nav-link" href="gallery">Gallery</a>
+          <!--<a class="nav-item nav-link" href="gallery">Gallery</a>-->
           <a class="nav-item nav-link" href="about">ついて</a>
           <a class="nav-item nav-link" href="contact">コンタクト</a>
 
